--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		
+		<!-- web crawling -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.13.1</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
