miyoung main html/css update

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.23</version>
 		</dependency>
+		
+		
+		<!-- jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.13.1</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
@@ -70,6 +78,7 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>
+
 
 		<!-- Logging -->
 		<dependency>
@@ -201,12 +210,15 @@
 			<version>1.9.13</version>
 		</dependency>
 
+
+
 		<!-- 메일 발송 -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+
 
 		<!-- Test -->
 		<dependency>
